Changelog for mk-duplicate-key-checker:

2008-06-02: version 1.1.6

   * Updated common code.

2008-03-16: version 1.1.5

   * Added --setvars option (bug #1904689, bug #1911371).
   * Added --charset option (bug #1877548).

2007-12-16: version 1.1.4

   * --tables and --ignoretables now accept names in the form db.tbl.

2007-12-07: version 1.1.3

   * Updated common code.
   * Corrected documentation.
   * Added --engine and --ignoreengine options.

2007-11-04: version 1.1.2

   * Made command-line help easier to use.
   * Removed the dependency on Term::ReadKey.
   * Replaced some code with modules that are unit-tested.

2007-09-20: version 1.1.1

   * Exit code wasn't always defined.

2007-09-01: version 1.1.0

   * Column printout was misaligned one space.
   * Refactored into a runnable module and added tests.
   * Redundant indexes were only detected if the shorter index was first.
   * Redundant foreign keys sometimes weren't detected.
   * All indexes on MEMORY tables were reported as HASH.
   * Added --clustered option to report appended PK columns as dupes for InnoDB and solidDB.

2007-08-23: version 1.0.5

   * MySQL socket connection option didn't work.
   * Added --askpass option.

2007-06-22: version 1.0.4

   * Documentation.

2007-06-10: version 1.0.3

   * Added --defaults-file option.
   * Added standard --version command-line option.

2007-03-25: version 1.0.2

   * Rewrite the GetOpt::Long code and rely on DBD to read MySQL option files.
   * Error handling if there aren't permissions to run SHOW CREATE TABLE on a
     view.
   * Documentation copy/paste error.

2007-03-02: version 1.0.1

   * Fixed several small bugs with quoting
   * Fixed bugs with index types (FULLTEXT, HASH etc)
   * Add --allatonce option

2007-03-01: version 1.0.0

   * Initial release.